test/corpus/spec/decode.txt
==================
spec decode: arrays-nested - parses list arrays for non-uniform objects
==================

items[2]:
  - id: 1
    name: First
  - id: 2
    name: Second
    extra: true

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (number)))
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (unquoted_string))))))
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (number)))
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (unquoted_string)))
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (boolean)))))))))))

==================
spec decode: arrays-nested - parses list arrays with empty items
==================

items[3]:
  - first
  - second
  -

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)))))
  (ERROR
    (row
      (value_row
        (row_values
          (single_value
            (value
              (unquoted_string))))))
    (row
      (value_row
        (row_values
          (single_value
            (value
              (unquoted_string))))))))

==================
spec decode: arrays-nested - parses list arrays with deeply nested objects
==================

items[2]:
  - properties:
      state:
        type: string
  - id: 2

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (object
                    (pair
                      key: (key
                        (unquoted_key))
                      value: (object
                        (pair
                          key: (key
                            (unquoted_key))
                          value: (value
                            (unquoted_string)))))
                    (ERROR)
                    (pair
                      key: (key
                        (unquoted_key))
                      value: (value
                        (number)))))))))))))

==================
spec decode: arrays-nested - parses list arrays containing objects with nested properties
==================

items[1]:
  - id: 1
    nested:
      x: 1

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (number)))
                (pair
                  key: (key
                    (unquoted_key))
                  value: (object
                    (pair
                      key: (key
                        (unquoted_key))
                      value: (value
                        (number)))))))))))))

==================
spec decode: arrays-nested - parses list items whose first field is a tabular array
==================

items[1]:
  - users[2]{id,name}:
      1,Ada
      2,Bob
    status: active

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  (header
                    length: (number)
                    fields: (field_list
                      (field_name
                        (unquoted_key))
                      (field_name
                        (unquoted_key))))
                  value: (array_body
                    (tabular_row
                      (value
                        (number))
                      (value
                        (unquoted_string)))
                    (tabular_row
                      (value
                        (number))
                      (value
                        (unquoted_string)))))))))
        (ERROR
          (value
            (unquoted_string))
          (unquoted_key))))))

==================
spec decode: arrays-nested - parses single-field list-item object with tabular array
==================

items[1]:
  - users[2]{id,name}:
      1,Ada
      2,Bob

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  (header
                    length: (number)
                    fields: (field_list
                      (field_name
                        (unquoted_key))
                      (field_name
                        (unquoted_key))))
                  value: (array_body
                    (tabular_row
                      (value
                        (number))
                      (value
                        (unquoted_string)))
                    (tabular_row
                      (value
                        (number))
                      (value
                        (unquoted_string)))))))))))))

==================
spec decode: arrays-nested - parses objects containing arrays (including empty arrays) in list format
==================

items[1]:
  - name: Ada
    data[0]:

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (unquoted_string)))
                (pair
                  key: (key
                    (unquoted_key))
                  (header
                    length: (number)))))))))))

==================
spec decode: arrays-nested - parses arrays of arrays within objects
==================

items[1]:
  - matrix[2]:
      - [2]: 1,2
      - [2]: 3,4
    name: grid

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  (header
                    length: (number))
                  value: (array_body
                    (row
                      (value_row
                        (list_array
                          (header
                            length: (number))
                          (inline_values
                            (value
                              (number))
                            (value
                              (number))))))
                    (row
                      (value_row
                        (list_array
                          (header
                            length: (number))
                          (inline_values
                            (value
                              (number))
                            (value
                              (number))))))))))))
        (ERROR
          (value
            (unquoted_string))
          (unquoted_key))))))

==================
spec decode: arrays-nested - parses nested arrays of primitives
==================

pairs[2]:
  - [2]: a,b
  - [2]: c,d

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (list_array
                (header
                  length: (number))
                (inline_values
                  (value
                    (unquoted_string))
                  (value
                    (unquoted_string))))))
          (row
            (value_row
              (list_array
                (header
                  length: (number))
                (inline_values
                  (value
                    (unquoted_string))
                  (value
                    (unquoted_string)))))))))))

==================
spec decode: arrays-nested - parses quoted strings and mixed lengths in nested arrays
==================

pairs[2]:
  - [2]: a,b
  - [3]: "c,d","e:f","true"

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (list_array
                (header
                  length: (number))
                (inline_values
                  (value
                    (unquoted_string))
                  (value
                    (unquoted_string))))))
          (row
            (value_row
              (list_array
                (header
                  length: (number))
                (inline_values
                  (value
                    (string))
                  (value
                    (string))
                  (value
                    (string)))))))))))

==================
spec decode: arrays-nested - parses empty inner arrays
==================

pairs[2]:
  - [0]:
  - [0]:

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (list_array
                (header
                  length: (number)))))
          (row
            (value_row
              (list_array
                (header
                  length: (number))))))))))

==================
spec decode: arrays-nested - parses mixed-length inner arrays
==================

pairs[2]:
  - [1]: 1
  - [2]: 2,3

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (list_array
                (header
                  length: (number))
                (inline_values
                  (value
                    (number))))))
          (row
            (value_row
              (list_array
                (header
                  length: (number))
                (inline_values
                  (value
                    (number))
                  (value
                    (number)))))))))))

==================
spec decode: arrays-nested - parses root-level primitive array inline
==================

[5]: x,y,"true",true,10

---

(source_file
  (document
    (array
      (header
        length: (number))
      (inline_values
        (value
          (unquoted_string))
        (value
          (unquoted_string))
        (value
          (string))
        (value
          (boolean))
        (value
          (number))))))

==================
spec decode: arrays-nested - parses root-level array of uniform objects in tabular format
==================

[2]{id}:
  1
  2

---

(source_file
  (document
    (array
      (header
        length: (number)
        fields: (field_list
          (field_name
            (unquoted_key))))
      (array_body
        (tabular_row
          (value
            (number)))
        (tabular_row
          (value
            (number)))))))

==================
spec decode: arrays-nested - parses root-level array of non-uniform objects in list format
==================

[2]:
  - id: 1
  - id: 2
    name: Ada

---

(source_file
  (document
    (array
      (header
        length: (number))
      (array_body
        (row
          (object_row
            (object
              (pair
                key: (key
                  (unquoted_key))
                value: (value
                  (number))))))
        (row
          (object_row
            (object
              (pair
                key: (key
                  (unquoted_key))
                value: (value
                  (number)))
              (pair
                key: (key
                  (unquoted_key))
                value: (value
                  (unquoted_string))))))))))

==================
spec decode: arrays-nested - parses root-level array mixing primitive, object, and array of objects in list format
==================

[3]:
  - summary
  - id: 1
    name: Ada
  - [2]:
    - id: 2
    - status: draft

---

(source_file
  (document
    (array
      (header
        length: (number))
      (array_body
        (row
          (value_row
            (row_values
              (single_value
                (value
                  (unquoted_string))))))
        (row
          (object_row
            (object
              (pair
                key: (key
                  (unquoted_key))
                value: (value
                  (number)))
              (pair
                key: (key
                  (unquoted_key))
                value: (value
                  (unquoted_string))))))
        (row
          (value_row
            (list_array
              (header
                length: (number))
              (array_body
                (row
                  (object_row
                    (object
                      (pair
                        key: (key
                          (unquoted_key))
                        value: (value
                          (number))))))
                (row
                  (object_row
                    (object
                      (pair
                        key: (key
                          (unquoted_key))
                        value: (value
                          (unquoted_string))))))))))))))

==================
spec decode: arrays-nested - parses root-level array of arrays
==================

[2]:
  - [2]: 1,2
  - [0]:

---

(source_file
  (document
    (array
      (header
        length: (number))
      (array_body
        (row
          (value_row
            (list_array
              (header
                length: (number))
              (inline_values
                (value
                  (number))
                (value
                  (number))))))
        (row
          (value_row
            (list_array
              (header
                length: (number)))))))))

==================
spec decode: arrays-nested - parses empty root-level array
==================

[0]:

---

(source_file
  (document
    (array
      (header
        length: (number)))))

==================
spec decode: arrays-nested - parses complex mixed object with arrays and nested objects
==================

user:
  id: 123
  name: Ada
  tags[2]: reading,gaming
  active: true
  prefs[0]:

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        value: (object
          (pair
            key: (key
              (unquoted_key))
            value: (value
              (number)))
          (pair
            key: (key
              (unquoted_key))
            value: (value
              (unquoted_string)))
          (pair
            key: (key
              (unquoted_key))
            (header
              length: (number))
            value: (inline_values
              (value
                (unquoted_string))
              (value
                (unquoted_string))))
          (pair
            key: (key
              (unquoted_key))
            value: (value
              (boolean)))
          (pair
            key: (key
              (unquoted_key))
            (header
              length: (number))))))))

==================
spec decode: arrays-nested - parses arrays mixing primitives, objects, and strings in list format
==================

items[3]:
  - 1
  - a: 1
  - text

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (row_values
                (single_value
                  (value
                    (number))))))
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (number))))))
          (row
            (value_row
              (row_values
                (single_value
                  (value
                    (unquoted_string)))))))))))

==================
spec decode: arrays-nested - parses arrays mixing objects and arrays
==================

items[2]:
  - a: 1
  - [2]: 1,2

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (number))))))
          (row
            (value_row
              (list_array
                (header
                  length: (number))
                (inline_values
                  (value
                    (number))
                  (value
                    (number)))))))))))

==================
spec decode: arrays-nested - parses quoted key with list array format
==================

"x-items"[2]:
  - id: 1
  - id: 2

---

(source_file
  (document
    (object
      (pair
        key: (key
          (string))
        (header
          length: (number))
        value: (array_body
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (value
                    (number))))))
          (row
            (object_row
              (object
                (pair
                  key: (key
                    (unquoted_key))
                  value: (inline_values
                    (value
                      (number))))))))))))

==================
spec decode: arrays-primitive - parses string arrays inline
==================

tags[3]: reading,gaming,coding

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (unquoted_string))
          (value
            (unquoted_string)))))))

==================
spec decode: arrays-primitive - parses number arrays inline
==================

nums[3]: 1,2,3

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (number))
          (value
            (number))
          (value
            (number)))))))

==================
spec decode: arrays-primitive - parses mixed primitive arrays inline
==================

data[4]: x,y,true,10

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (unquoted_string))
          (value
            (boolean))
          (value
            (number)))))))

==================
spec decode: arrays-primitive - parses empty arrays
==================

items[0]:

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))))))

==================
spec decode: arrays-primitive - parses single-item array with empty string
==================

items[1]: ""

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (string)))))))

==================
spec decode: arrays-primitive - parses multi-item array with empty string
==================

items[3]: a,"",b

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (string))
          (value
            (unquoted_string)))))))

==================
spec decode: arrays-primitive - parses whitespace-only strings in arrays
==================

items[2]: " ","  "

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (string))
          (value
            (string)))))))

==================
spec decode: arrays-primitive - parses strings with delimiters in arrays
==================

items[3]: a,"b,c","d:e"

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (string))
          (value
            (string)))))))

==================
spec decode: arrays-primitive - parses strings that look like primitives when quoted
==================

items[4]: x,"true","42","-3.14"

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (string))
          (value
            (string))
          (value
            (string)))))))

==================
spec decode: arrays-primitive - parses strings with structural tokens in arrays
==================

items[3]: "[5]","- item","{key}"

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (string))
          (value
            (string))
          (value
            (string)))))))

==================
spec decode: arrays-primitive - parses quoted key with inline array
==================

"my-key"[3]: 1,2,3

---

(source_file
  (document
    (object
      (pair
        key: (key
          (string))
        (header
          length: (number))
        value: (inline_values
          (value
            (number))
          (value
            (number))
          (value
            (number)))))))

==================
spec decode: arrays-primitive - parses quoted key containing brackets with inline array
==================

"key[test]"[3]: 1,2,3

---

(source_file
  (document
    (object
      (pair
        key: (key
          (string))
        (header
          length: (number))
        value: (inline_values
          (value
            (number))
          (value
            (number))
          (value
            (number)))))))

==================
spec decode: arrays-primitive - parses quoted key with empty array
==================

"x-custom"[0]:

---

(source_file
  (document
    (object
      (pair
        key: (key
          (string))
        (header
          length: (number))))))

==================
spec decode: arrays-tabular - parses tabular arrays of uniform objects
==================

items[2]{sku,qty,price}:
  A1,2,9.99
  B2,1,14.5

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          fields: (field_list
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))))
        value: (array_body
          (tabular_row
            (value
              (unquoted_string))
            (value
              (number))
            (value
              (number)))
          (tabular_row
            (value
              (unquoted_string))
            (value
              (number))
            (value
              (number))))))))

==================
spec decode: arrays-tabular - parses nulls and quoted values in tabular rows
==================

items[2]{id,value}:
  1,null
  2,"test"

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          fields: (field_list
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))))
        value: (array_body
          (tabular_row
            (value
              (number))
            (value
              (null)))
          (tabular_row
            (value
              (number))
            (value
              (string))))))))

==================
spec decode: arrays-tabular - parses quoted colon in tabular row as data
==================

items[2]{id,note}:
  1,"a:b"
  2,"c:d"

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          fields: (field_list
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))))
        value: (array_body
          (tabular_row
            (value
              (number))
            (value
              (string)))
          (tabular_row
            (value
              (number))
            (value
              (string))))))))

==================
spec decode: arrays-tabular - parses quoted header keys in tabular arrays
==================

items[2]{"order:id","full name"}:
  1,Ada
  2,Bob

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          fields: (field_list
            (field_name
              (string))
            (field_name
              (string))))
        value: (array_body
          (tabular_row
            (value
              (number))
            (value
              (unquoted_string)))
          (tabular_row
            (value
              (number))
            (value
              (unquoted_string))))))))

==================
spec decode: arrays-tabular - parses quoted key with tabular array format
==================

"x-items"[2]{id,name}:
  1,Ada
  2,Bob

---

(source_file
  (document
    (object
      (pair
        key: (key
          (string))
        (header
          length: (number)
          fields: (field_list
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))))
        value: (array_body
          (tabular_row
            (value
              (number))
            (value
              (unquoted_string)))
          (tabular_row
            (value
              (number))
            (value
              (unquoted_string))))))))

==================
spec decode: arrays-tabular - treats unquoted colon as terminator for tabular rows and start of key-value pair
==================

items[2]{id,name}:
  1,Alice
  2,Bob
count: 2

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          fields: (field_list
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))))
        value: (array_body
          (tabular_row
            (value
              (number))
            (value
              (unquoted_string)))
          (tabular_row
            (value
              (number))
            (value
              (unquoted_string)))))
      (pair
        key: (key
          (unquoted_key))
        value: (value
          (number))))))

==================
spec decode: blank-lines - accepts blank line between root-level fields
==================

a: 1

b: 2

---

(source_file
  (ERROR
    (document
      (object
        (pair
          key: (key
            (unquoted_key))
          value: (value
            (number))))))
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        value: (value
          (number))))))

==================
spec decode: blank-lines - accepts trailing newline at end of file
==================

a: 1


---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        value: (value
          (number))))))

==================
spec decode: blank-lines - accepts multiple trailing newlines
==================

a: 1




---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        value: (value
          (number)))))
  (ERROR))

==================
spec decode: blank-lines - accepts blank line after array ends
==================

items[1]:
  - a

b: 2

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (row_values
                (single_value
                  (value
                    (unquoted_string))))))))
      (pair
        key: (key
          (unquoted_key))
        value: (value
          (number))))))

==================
spec decode: blank-lines - accepts blank line between nested object fields
==================

a:
  b: 1

  c: 2

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        value: (object
          (pair
            key: (key
              (unquoted_key))
            value: (value
              (number)))))
      (pair
        key: (key
          (unquoted_key))
        value: (value
          (number))))))

==================
spec decode: blank-lines - ignores blank lines inside list array when strict=false
==================

items[3]:
  - a

  - b
  - c

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (row_values
                (single_value
                  (value
                    (unquoted_string))))))))))
  (ERROR
    (key
      (unquoted_key))
    (unquoted_key)))

==================
spec decode: blank-lines - ignores blank lines inside tabular array when strict=false
==================

items[2]{id,name}:
  1,Alice

  2,Bob

---

(source_file
  (ERROR
    (pair
      key: (key
        (unquoted_key))
      (header
        length: (number)
        fields: (field_list
          (field_name
            (unquoted_key))
          (field_name
            (unquoted_key))))
      value: (array_body
        (tabular_row
          (value
            (number))
          (value
            (unquoted_string))))))
  (document
    (value
      (unquoted_string))))

==================
spec decode: blank-lines - ignores multiple blank lines in arrays when strict=false
==================

items[2]:
  - a


  - b

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (array_body
          (row
            (value_row
              (row_values
                (single_value
                  (value
                    (unquoted_string))))))))))
  (ERROR
    (key
      (unquoted_key))))

==================
spec decode: delimiters - parses primitive arrays with tab delimiter
==================

tags[3	]: reading	gaming	coding

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          delimiter: (delimiter))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (unquoted_string))
          (value
            (unquoted_string)))))))

==================
spec decode: delimiters - parses primitive arrays with pipe delimiter
==================

tags[3|]: reading|gaming|coding

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          delimiter: (delimiter))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (unquoted_string))
          (value
            (unquoted_string)))))))

==================
spec decode: delimiters - parses primitive arrays with comma delimiter
==================

tags[3]: reading,gaming,coding

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number))
        value: (inline_values
          (value
            (unquoted_string))
          (value
            (unquoted_string))
          (value
            (unquoted_string)))))))

==================
spec decode: delimiters - parses tabular arrays with tab delimiter
==================

items[2	]{sku	qty	price}:
  A1	2	9.99
  B2	1	14.5

---

(source_file
  (document
    (object
      (pair
        key: (key
          (unquoted_key))
        (header
          length: (number)
          delimiter: (delimiter)
          fields: (field_list
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))
            (field_name
              (unquoted_key))))
        value: (array_body
          (tabular_row
            (value
              (unquoted_string))
            (value
              (number))
            (value
              (number)))
          (tabular_row
            (value
              (unquoted_string))
            (value
              (number))
            (value
              (number))))))))

==================
spec decode: delimiters - parses tabular arrays with pipe delimiter
==================

items[2|]{sku|qty|price}:
  A1|2|9.99
  B2|1|14.5

---
